fix: move to JDK 21
refactor to use some of new JDK features

Refs: XRDDEV-2627